adjust application structure

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -2,4 +2,5 @@
 
 @import "normalize";
 
+@import '../../vendor/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 // Import your framework/app below
