adjust application structure

--- a/src/templates/home/home.tpl.html
+++ b/src/templates/home/home.tpl.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
     <label for="nameInput">Your name:</label>
-    <input id="nameInput" name="nameInput" ng-model="homeCtrl.userName"/>
+    <input id="nameInput" name="nameInput" ng-model="homeCtrl.user.name"/>
     <button class="btn btn-primary" ng-click="homeCtrl.sayHello()">Say Hello</button>
 
 </div>
