home module in progress

--- a/src/templates/home/home.tpl.html
+++ b/src/templates/home/home.tpl.html
@@ -1,7 +1,32 @@
 <div class="container-fluid">
 
-    <label for="nameInput">Your name:</label>
-    <input id="nameInput" name="nameInput" ng-model="homeCtrl.user.name"/>
-    <button class="btn btn-primary" ng-click="homeCtrl.sayHello()">Say Hello</button>
+    <carousel interval="homeCtrl.myInterval" no-wrap="homeCtrl.noWrapSlides" disable-animation="true" class="top-carousel">
+        <slide ng-repeat="slide in homeCtrl.pageData.slides" active="slide.active">
+
+            <picture class="expanded-container">
+                <!--[if IE 9]>
+                <video style="display: none;"><![endif]-->
+                <source srcset="{{slide.xsHref}}" media="(max-width: 550px)"/>
+                <source srcset="{{slide.smHref}}" media="(min-width: 551px) and (max-width: 645px)"/>
+                <source srcset="{{slide.msHref}}" media="(min-width: 646px) and (max-width: 810px)"/>
+                <source srcset="{{slide.lgHref}}" media="(min-width: 811px)"/>
+                <!--[if IE 9]></video><![endif]-->
+                <img srcset="{{slide.href}}" alt="{{slide.title}}" style="height: 100%"/>
+            </picture>
+
+            <div class="carousel-caption">
+                <h3>{{slide.title}}</h3>
+            </div>
+        </slide>
+    </carousel>
+
+    <div class="container-fluid">
+
+        <div ng-repeat="slide in homeCtrl.pageData.slides" class="bs-callout"
+             ng-class="{'bs-callout-primary': $index % 2 == 0, 'bs-callout-info': $index % 2 != 0}">
+            <h4>{{slide.title}}</h4>
+            <p ng-bind-html="slide.description | safeHtml"></p>
+        </div>
+    </div>
 
 </div>
